# lopdf-table

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
doc/: test.json
examples/: basic_table.rs  cell_fonts.rs  multi_page_table.rs  multiline_text.rs  styled_table.rs  unicode_table.rs
src/: constants.rs  drawing.rs  drawing_utils.rs  error.rs  font.rs  layout.rs  lib.rs  style.rs  table.rs  text.rs
